# nl-to-sql-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: sample_ecommerce.sql
data/eval/: questions.jsonl
docs/: architecture.md  project-plan.md  release-checklist.md
src/nl_to_sql_agent/: __init__.py  api.py  cli.py  database.py  evaluation.py  generator.py  providers.py  repair.py  schema.py  validator.py
tests/: test_api.py  test_database.py  test_evaluation.py  test_generator.py  test_providers.py  test_repair.py  test_streamlit_app.py
