[project]
name = "nl-to-sql-agent"
version = "0.1.0"
description = "Schema-aware natural language to SQL agent portfolio project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "fastapi>=0.125.0",
    "pydantic>=2.12.0",
    "pandas>=2.3.0",
    "sqlglot>=28.0.0",
    "streamlit>=1.52.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
nl-to-sql = "nl_to_sql_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
